# archive

./: .gitignore  .prettierrc  README.md  archive.py  archive_ir.py  build_f1099.py  build_f8949.py  build_gl.py  build_ir.py  env_manager.py  graph_principal.py  init.sh  link_f8949.py  main.py  post_average.py  post_cost_average.py  post_dca.py  post_dynamic_cost_average.py  post_value_average.py  pyproject.toml  run.sh
archive/average/: cost.py  dynamic.py  factory.py  models.py  value.py
archive/coinbase/: ir.py  models.py  parser.py  scanner.py
archive/coinbase_pro/: ir.py  models.py  parser.py  scanner.py
archive/csv/: config.py  tools.py  wallet.py
archive/csv/coinbase/: ir.py  note.py  parser.py  scanner.py  transaction.py
archive/csv/coinbase_pro/: ir.py  parser.py  (+1 more)
archive/exchange/: __init__.py  parser.py
archive/f1099/: parser.py  process.py  scanner.py
archive/f8949/: models.py  parser.py  process.py  scanner.py
archive/form8949/: parser.py  process.py  scanner.py
archive/gl/: models.py  parser.py  process.py  scanner.py
archive/ir/: builder.py  config.py  csv.py  db.py  factory.py  models.py  process.py  scanner.py  transaction.py
archive/kraken/: ir.py  parser.py  scanner.py
archive/link/: parser.py  process.py
archive/tools/: db.py  filter.py  io.py  logger.py
data/in/: coinbase-pro-fills.csv  coinbase-transactions.csv  kraken-trades.csv
data/ir/: coinbase-transactions.csv
data/sample/: coinbase-input.csv  coinbase-intermediary-representation.json  coinbase-output.csv  coinbase-transactions-texttable.txt
docs/: index.html  search.js
docs/archive/: __init__.html
docs/specs/: 00-Overview.md  01-Data-Management.md  02-Cost-Averaging.md  03-Dynamic-Cost-Averaging.md  04-Value-Averaging.md  filter_transactions.md  gains_losses.md
scripts/: format-f8949.js  format-gl.js
scripts/javascript/: format-gl.js
scripts/service/: archive_average.service  archive_average.timer
scripts/shell/: setup.sh  setup_averaging_service.sh  setup_averaging_timer.sh  setup_dev_environment.sh  systemd.sh
(+95 files in other folders)
