[tool.poetry]
name               = "archive"
version            = "0.0.7"
description        = "Convert brokerage CSV transactions to a unified format, Calculate gains and losses, and create Form-8949 for filing taxes."
authors            = ["77757836+teleprint-me@users.noreply.github.com"]
license            = "AGPL"

[tool.poetry.dependencies]
python             = "^3.10"
texttable          = "^1.6.4"
python-dateutil    = "^2.8.2"
python-dotenv      = "^0.21.1"
pytz               = "^2022.1"
peewee             = "^3.14.10"
iso8601            = "^1.1.0"
requests           = "^2.28.2"

[tool.poetry.dev-dependencies]
bpython            = "^0.24"
black              = "^23.1.0"
flake8             = "^6.0.0"
flake8-black       = "^0.3.6"
pdoc               = "^12.3.1"
pytest             = "^7.2.1"
requests-mock      = "^1.10.0"
isort              = "^5.12.0"

[tool.black]
line-length = 79

[build-system]
requires           = ["poetry-core>=1.0.0"]
build-backend      = "poetry.core.masonry.api"
