[tool.poetry]
name               = "archive"
version            = "0.2.2"
description        = "Command-line tools for managing cryptocurrency investments."
authors            = ["Austin Berrio <aberrio@teleprint.me>"]
license            = "AGPL"

[tool.poetry.dependencies]
python             = "^3.10"
texttable          = "^1.7.0"
python-dateutil    = "^2.9.0"
python-dotenv      = "^1.0.1"
pytz               = "^2024.1"
peewee             = "^3.17.1"
iso8601            = "^2.1.0"
requests           = "^2.32.0"

[tool.poetry.dev-dependencies]
bpython            = "^0.24"
black              = "^24.3.0"
flake8             = "^7.0.0"
flake8-black       = "^0.3.6"
pdoc               = "^14.4.0"
pytest             = "^8.1.1"
requests-mock      = "^1.11.0"
isort              = "^5.13.2"

[tool.black]
line-length = 79

[build-system]
requires           = ["poetry-core>=1.0.0"]
build-backend      = "poetry.core.masonry.api"
